OSP-Core: Hourly Task of Cleaning up Guests which have not logged in within the last 3 months
OSP-Core: Optimized RTMP Stage 1, Stage 2, and RTMP Restream API Queries which were causing an issue with Starting a Stream on larger channels

0.9.5
==============================================
OSP-Core: Upgrade Cachelib == 0.8.0
OSP-Core (Docker): Fixed issue on running DB upgrade via Flask CLI

0.9.4a
==============================================
OSP-Core: Fix for Cachelib - downgrade from 0.9.0 -> 0.1.1

0.9.4
==============================================
OSP-Core: Dark-Cow, Defaultv2, & Defaultv2-Dark has been removed.
OSP-Core: Fixes issue where User Deletion via scheduled request was causing an unhandled error when logging
OSP-Core: Add SQLAlchemy auto-rollback on session failure
OSP-Core: Fixes issue where an invalid global panel was causing an error on the admin page
OSP-Core: Corrected issue of 0.9.0.sh upgrader not using the new 'flask db' method of upgrading

0.9.3
==============================================
OSP-Core: Fixes a bug where video retention was not working properly
OSP-Core: Additional Optimization of SocketIO Queries
OSP-Core: Update SentryIO to 1.6.0
OSP-Core: Optimization of User Profile Page
OSP-Core: Stapled Cachelib to 0.1.1
OSP-Core: Fixes a bug which causes the Channel Panel to display no information
OSP-Core: Fixes a bug where Channel Level Panels were not displaying in settings after creation
** Important Note **: Depreciated Themes (Defaultv2/Defaultv2-Dark & Dark-Cow to be Removed in 0.9.4)

0.9.2
==============================================
OSP-Core: Fix an issue on User Channels where uploaded stickers are not shown in the UI
OSP-Core: Fixes an issue where Celery workers were dying prematurely
OSP-Core: Upgrades Redis-py to 4.3.3
OSP-Core: Upgrades Celery to 5.2.7
OSP-Core: Upgrades Click to 8.1.3
OSP-Core: Upgrades aiohttp to 3.8.1
OSP-Core: Upgrades pytz to 2022.1
OSP-Core: Upgrades Flask to 2.1.2