@@ -43,7 +43,7 @@
     {{ modals.delete_webhook() }}
     {{ modals.new_webhook() }}
     {{ modals.upload_video_thumbnail() }}
-    {{ modals.move_video_socketio(current_user) }}
+    {{ modals.move_video_socketio(channels) }}
     {{ modals.new_restream() }}
     {{ modals.new_channel(sysSettings, topics) }}
     {{ modals.delete_video_socketio() }}
